# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md
OpenGL/: Application.cpp  CMakeLists.txt  glad.c
OpenGL/dependencies/glad/include/glad/: glad.h
OpenGL/dependencies/stb/include/stb_image/: stb_image.cpp  stb_image.h
OpenGL/memories/: OriginalShaderCode.cpp
OpenGL/primitives/: Shader.cpp  Shader.h
OpenGL/resources/shaders/: Default.shader
